--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
+    //forConverter
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    //koin
+    implementation "io.insert-koin:koin-core:3.4.0"
+
 
 
 
